--- a/duckdb-ui/Dockerfile
+++ b/duckdb-ui/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     socat \
     netcat-openbsd \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Download and install DuckDB CLI
@@ -19,9 +20,11 @@ RUN wget https://github.com/duckdb/duckdb/releases/latest/download/duckdb_cli-li
     rm duckdb_cli-linux-amd64.zip
 
 # Install Python packages for DuckDB and Kafka integration
+# Use latest DuckDB to match CLI version (v1.4.1)
 RUN pip3 install --no-cache-dir \
-    duckdb==0.10.0 \
-    confluent-kafka==2.3.0
+    duckdb \
+    confluent-kafka==2.3.0 \
+    pytz
 
 WORKDIR /workspace
 
